--- a/Phobos.vcxproj
+++ b/Phobos.vcxproj
@@ -19,6 +19,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Ext\Techno\Body.RandomTarget.cpp" />
+    <ClCompile Include="src\Ext\Techno\Body.StopEvent.cpp" />
     <ClCompile Include="src\Ext\Techno\Hooks.RandomTarget.cpp" />
     <ClCompile Include="src\Ext\Techno\Body.AdvancedGuard.cpp" />
     <ClCompile Include="src\Ext\Scenario\Hooks.SkipMapSelect.cpp" />
